--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public",
-    "build": "webpack --watch",
+    "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
   "author": "Nate D",
