--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Put your life in the hands of a script.",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public",
+    "start": "node server/server.js",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "normalize.css": "^8.0.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0"
